<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Guía Telefónica</string>
    <string name="widget_name_contact_card">Tarjeta de Contacto</string>
    <string name="widget_name_searcher">Buscador</string>
    <string name="company">COPACO S.A.</string>
    <string name="menuitem_searchby">Búsqueda avanzada.</string>
    <string name="menuitem_updatedatafile">Actualización</string>
    <string name="menuitem_settings">Configuración.</string>
    <string name="menuitem_about">Acerca de.</string>
    <string name="detailpage_initials">Inicial:</string>
    <string name="detailpage_name">no esnada2.:</string>
    <string name="detailpage_localname">Ciudad:</string>
    <string name="detailpage_gender">esto no es nada:</string>
    <string name="detailpage_phone">Teléfono:</string>
    <string name="detailpage_title"></string>
    <string name="detailpage_depno">Calle Dir.:</string>
    <string name="detailpage_depname">Dto.:</string>
    <string name="detailpage_manager">Característica:</string>
    <string name="search_initials">Nombre:</string>
    <string name="searchby_initials">Nombre:</string>
    <string name="searchby_name">Nombre:</string>
    <string name="searchby_phone">Teléfono:</string>
    <string name="searchby_depName">Dep.:</string>
    <string name="searchby_ciudad">Ciudad:</string>
    <string name="searchby_nombre">Nombre Comp.:</string>
    <string name="searchby_ap">Apellido:</string>
    <string name="searchby_manager">Característica:</string>
    <string name="version">Guía Telefónica COPACO ALFA</string>
    <string name="author">by J.R.</string>
    <string name="call">Llamar al teléfono</string>
    <string name="close">Cerrar</string>
    <string name="findInMap">Find in Map</string>
    <string name="datapackage_file">Datos del archivo:</string>
    <string name="browse">Buscar...</string>
    <string name="show_guidepage">Mostrar la guía en el próximo inicio.</string>
    <string name="start_update_service">Información de la actulización automática(Nota: se utilizará más energía de la batería)</string>
    <string name="update_service_interval">Intérvalo en el tiempo de actualización:</string>
    <string name="title_mainpage">Guía Telefónica</string>
    <string name="title_detailpage"></string>
    <string name="title_mappage">Info</string>
    <string name="title_favoritelist">Favorito</string>
    <string name="title_phonebooklist">P/E</string>
    <string name="title_phonebooklist_land">Personas/Empresas</string>
    <string name="title_searchdialog">Escriba un nombre para buscar</string>
    <string name="title_searchbydialog">Introduzca un criterio de búsqueda:</string>
    <string name="title_updatepackagedialog">Actualizar datos</string>
    <string name="title_settingsdialog">Configuraciones</string>
    <string name="title_aboutdialog">Acerca de</string>
    <string name="title_map">Seat Map</string>
    <string name="lable_spinner_select">Por favor seleccione ...</string>
    <string name="lable_okbtn">Aceptar</string>
    <string name="lable_cancelbtn">Cancelar</string>
    <string name="lable_closebtn">Cerrar</string>
   	<string name="lable_gender_unknown">Desconocido</string>
   	<string name="lable_gender_male">Hombre</string>
   	<string name="lable_gender_female">Mujer</string>


    <string name="search_contact">buscar emergencia...</string>
    <string name="title_emergencia">Emergencias</string>
    <string name="title_hotel">Hoteles</string>
    <string name="search_contact_h">buscar hotel...</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_contact_details">Detalles</string>
    <string name="title_activity_contact_details_h">Hoteles</string>

    <string name="estado_label">Ciudad</string>
    <string name="descripcion_label">Calle</string>
    <string name="tecnico_label">Teléfono</string>
    <string name="categoria_label">Categoría</string>
    <string name="prioridad_label">Llamar</string>

</resources>
